<resources>
    <string name="app_name">再易</string>
    <string name="Add">添加</string>
    <string name="Balance">￥5.20</string>
    <string name="Consignee">收货人</string>
    <string name="Consignee_two">收货人：</string>
    <string name="DeliveryAddress">收货地址</string>
    <string name="ExpressCompany">快递公司：</string>
    <string name="ExpressNumber">快递编号：</string>
    <string name="guide_text_application_name">再易</string>
    <string name="guide_text_taste">立即体验</string>
    <string name="bottom_text_firstpage">首页</string>
    <string name="bottom_text_squarepage">广场</string>
    <string name="bottom_text_messagepage">消息</string>
    <string name="bottom_text_mypage">我的</string>
    <string name="mypublish">我的发布</string>
    <string name="myneed">我的需求</string>
    <string name="really_pay">实付金额</string>
    <string name="MyAccount">账户</string>
    <string name="mycollection">我的收藏</string>
    <string name="mysold">我卖出的</string>
    <string name="mybought">我买到的</string>
    <string name="mywallet">钱包</string>
    <string name="help_fee">赏钱</string>
    <string name="Recharge">充值</string>
    <string name="Withdraw">提现到支付宝</string>
    <string name="ShippingAddress">送货地址</string>
    <string name="time">相约何时</string>
    <string name="thing">请点击选择上门服务日期</string>
    <string name="thing2">请点击选择具体服务时间</string>
    <string name="TakeAddress">拿货地址</string>
    <string name="pay">支付</string>
    <string name="contact">联系客服</string>
    <string name="consignee">收货人</string>
    <string name="phonenumber">手机号码</string>
    <string name="province">省份</string>
    <string name="city">城市</string>
    <string name="area">地区</string>
    <string name="address">详细地址</string>
    <string name="postalcode">邮政编码</string>
    <string name="setting">设置</string>
    <string name="courierserve">快递服务</string>
    <string name="text_userhead">头像</string>
    <string name="text_sex">性别</string>
    <string name="text_age">年龄</string>
    <string name="text_nickname">昵称</string>
    <string name="text_home">常住</string>
    <string name="text_intro">简介</string>
    <string name="text_address">收货地址</string>
    <string name="text_eletric">电子产品</string>
    <string name="text_book">书籍旧刊</string>
    <string name="text_transpot">交通工具</string>
    <string name="text_courierserve">快递服务</string>
    <string name="text_inspection_delivery">快派出小二去验货并发货</string>
    <string name="text_costemes">彩妆护肤</string>
    <string name="setdefault">设为默认地址</string>
    <string name="release_demand">发布需求</string>
    <string name="submit">提交</string>
    <string name="example">我需要一个8成新的手机</string>
    <string name="tvTitle">标题</string>
    <string name="btRight">右上按钮</string>
    <string name="ServiceInformation">服务信息</string>
    <string name="tvLogisticsCompany">物流公司</string>
    <string name="commodityDetail">详情</string>
    <string name="MycommodityDetail">订单详情</string>
    <string name="delete">删除</string>
    <string name="add_address">添加地址</string>
    <string name="tvLogisticsNumber">物流单号</string>
    <string name="btLogistics">提交</string>
    <string name="ServiceNumber">服务编号：</string>
    <string name="tbServiceNumber">312154654879</string>
    <string name="tvExpressCompany">韵达快递</string>
    <string name="tvExpressNumber">456788794</string>
    <string name="sender">寄件人</string>
    <string name="tvSender">cherry</string>
    <string name="phoneNum">18251957360</string>
    <string name="RecipientCity">收件城市</string>
    <string name="tvRecipientCity">南京市</string>
    <string name="overweight">是否超重</string>
    <string name="tvOverweight">否</string>
    <string name="pickAddress">取件地址</string>
    <string name="tvPickAddress">南京市什么什么</string>
    <string name="tvDeliveryAddress">南京市什么什么鬼</string>
    <string name="Issuer">发布人：</string>
    <string name="tvConsignee">andy</string>
    <string name="write_number">填写单号</string>
    <string name="edit_address">编辑地址</string>
    <string name="save_address">保存</string>
    <string name="courier_company">快递公司</string>
    <string name="college">学校</string>
    <string name="courier_take">快递代发</string>
    <string name="courier_bring">快递代拿</string>
    <string name="release">发布</string>
    <string name="text_cloth">鞋包服饰</string>
    <string name="text_goods">日用百货</string>
    <string name="text_others">其它</string>
    <string name="take_goods">上门取件</string>
    <string name="title_commodity">商品列表</string>
    <string name="details_commodity">商品详情</string>
    <string name="MyNeed">我需求的</string>
    <string name="title_myinfomation">我的资料</string>
    <string name="login">登录</string>
    <string name="im_login">登录聊天系统</string>
    <string name="register">注册</string>
    <string name="userName">用户名：您的手机号</string>
    <string name="userPwd">密码</string>
    <string name="rem_pwd">记住密码</string>
    <string name="firm_pwd">确认密码</string>
    <string name="check_logistics">查看物流</string>
    <string name="firm_get_goods">确认收货</string>
    <string name="agreement">同意注册协议</string>
    <string name="phonecode">请输入验证码</string>
    <string name="hint_edit_nickname">请输入您的昵称</string>
    <string name="find_pwd">找回密码</string>
    <string name="share_desc">分享什么呢</string>
    <string name="agreement_name">用户注册协议</string>
    <string name="error_agreement">请阅读用户协议条款并同意!</string>
    <string name="setting_user_info">个人信息</string>
    <string name="text_choose_sex">选择性别</string>
    <string name="text_choose_photo">选择头像</string>
    <string name="text_edit_nickname">编辑昵称</string>
    <string name="text_edit_intro">个人简介</string>
    <string name="text_edit_home">常住地址</string>
    <string name="text_ensure">确认</string>
    <string name="setting_pwd">修改密码</string>
    <string name="modify_pwd_name">修改密码</string>
    <string name="user_pwd">旧密码</string>
    <string name="user_newpwd">新密码</string>
    <string name="user_newpwd2">确认新密码</string>
    <string name="user_phone_code">获取验证码</string>
    <string name="get_phone_code">验证码</string>
    <string name="error_name">请输入用户名！</string>
    <string name="error_name_length1">用户名长度不能少于3个字符</string>
    <string name="error_name_length2">用户名长度不能超过20个字符</string>
    <string name="error_name_expr">只能输入数字</string>
    <string name="error_pwd">请输入密码！</string>
    <string name="error_pwd_match">两次密码输入不一致！</string>
    <string name="error_pwd_length1">密码长度不能少于6个字符</string>
    <string name="error_pwd_length2">密码长度不能超过20个字符</string>
    <string name="error_pwd_expr">密码只能是字母和数字</string>
    <string name="error_pwd_old">请输入旧密码！</string>
    <string name="error_pwd_new">请输入新密码！</string>
    <string name="error_phone">请输入手机号码！</string>
    <string name="error_phone_expr">手机格式不正确!</string>
    <string name="error_phone_expr2">手机不能输入中文!</string>
    <string name="error_phone_code_expr">验证码只能是数字</string>
    <string name="error_nickname">请输入昵称！</string>
    <string name="error_nickname_length1">昵称长度不能少于3个字符</string>
    <string name="error_nickname_length2">昵称长度不能超过20个字符</string>
    <string name="error_nickname_expr">昵称格式不正确</string>
    <string name="text_talk">联系卖家</string>
    <string name="text_talk_buy">联系买家</string>
    <string name="text_wanttosell">想卖</string>
    <string name="text_orginal_cost">原价</string>
    <string name="text_yunfei">运费</string>
    <string name="text_type">分类</string>
    <string name="text_select_type">请选择分类</string>
    <string name="text_change">物物交换</string>
    <string name="text_tuijian">精品推荐</string>
    <string name="text_pipei">匹配卖货</string>
    <string name="text_yanhuo">第三方验货</string>
    <string name="text_title">标题</string>
    <string name="text_describe">请描述一下您的商品</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="agreement_desc">                    提醒：本程序是一款Android学习产品，使用本程序即同意如下条款。
        \n1、服务修订
		\n本程序所有者保留随时修改或中断服务而不需通知用户的权利。
		\n2、用户隐私制度
		\n尊重用户个人隐私是本公司的一项基本政策。本公司一定不会在用户不允许的情况下公开、或透露用户的注册资料。
		\n3、用户的帐号、密码和安全性
		\n如果您未保管好自己的帐号和密码而对您或第三方造成的损害，责任由用户个人承担。
		\n4、拒绝提供担保和免责声明
		\n用户明确同意使用本项服务的风险由用户个人承担。服务提供是建立在免费的基础上。本公司不提供任何类型的担保。
		\n5、用户管理
		\n用户单独承担发布内容的责任。用户对服务的使用是根据所有适用于服务的地方法律、国家法律和国际法律标准的。
		\n6、通告
		\n所有发给用户的通告都可通过电子邮件或常规的信件传送。  </string>
    <string name="text_checkupdate">检查更新</string>
    <string name="text_logout">退出账号</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_crop_image">CropImageActivity</string>
    <string name="title_activity_enter">EnterActivity</string>
    <string name="title_activity_image_view">ImageViewActivity</string>
    <string name="connectTokefu">联系我们</string>
    <string name="text_about">关于</string>
    <string name="title_activity_custom_service">CustomServiceActivity</string>
    <string name="text_location">正在定位</string>
    <string name="citylist">城市列表</string>
    <string-array name="logistics_status">
        <item>待查询</item>
        <item>查询异常</item>
        <item>暂无记录</item>
        <item>在途中</item>
        <item>派送中</item>
        <item>已签收</item>
        <item>用户拒签</item>
        <item>疑难件</item>
        <item>无效单</item>
        <item>超时单</item>
        <item>签收失败</item>
        <item>退回</item>
    </string-array>
    <string name="title_activity_search">SearchActivity</string>
    <string name="go_pay">去付款</string>
    <string name="err_search_nothing">对不起没有搜索到任何商品</string>
    <string name="title_activity_abort">AbortActivity</string>
    <string name="TakeTime">到达时间</string>
    <string name="Take">请输入快递到达时间</string>
    <string name="school">学校</string>
    <string name="cities">城市</string>
    <string name="MerchandiseType">类型</string>
</resources>