<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants">


    <LinearLayout
        android:id="@+id/llExpressInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="25dp"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ServiceNumber" />

            <TextView
                android:id="@+id/tvServiceNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tbServiceNumber" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ExpressCompany" />

            <TextView
                android:id="@+id/tvExpressCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvExpressCompany" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ExpressNumberLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ExpressNumber" />

            <TextView
                android:id="@+id/tvExpressNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvExpressNumber" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Issuer" />

            <TextView
                android:id="@+id/tvIssuer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvSender" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/xiahuaxian"
        android:layout_width="match_parent"
        android:layout_height="0.1dip"
        android:layout_below="@id/llExpressInformation"
        android:background="#fabbbecf" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/xiahuaxian"
        android:background="@android:color/white">

        <Button
            android:id="@+id/btContact"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="29dp"
            android:layout_marginStart="29dp"
            android:background="@drawable/contact_customer_service"
            android:clickable="true"
            android:focusable="false" />

        <TextView
            android:id="@+id/tvContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="7dp"
            android:layout_toEndOf="@+id/btContact"
            android:layout_toRightOf="@+id/btContact"
            android:text="@string/contact" />



        <Button
            android:id="@+id/btPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/btDelete"
            android:background="@drawable/button_courier_servre"
            android:clickable="true"
            android:focusable="false"
             />

        <Button
            android:id="@+id/btDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_courier_servre"
            android:clickable="true"
            android:focusable="false"
            android:text="@string/delete" />
    </RelativeLayout>
</RelativeLayout>