<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_material_light"
    android:orientation="vertical"
    tools:context="com.deeal.exchange.activity.EditAddressActivity">

    <include layout="@layout/title_bar" />

    <RelativeLayout
        android:id="@+id/rlReceiver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="4dp">

        <TextView
            android:id="@+id/tvReceiver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            android:text="@string/consignee"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etReceiver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/tvReceiver" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlTel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="4dp">

        <TextView
            android:id="@+id/tvTel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:text="@string/phonenumber"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etTel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tvTel"
            android:phoneNumber="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlCollege"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="4dp">

        <TextView
            android:id="@+id/tvCollege"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="48dp"
            android:text="@string/address"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/tv_express_Address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@id/tvCollege" />

        <Button
            android:id="@+id/btUserHome"
            android:layout_width="20dp"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:background="@mipmap/btright" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlProvince"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="4dp">

        <TextView
            android:id="@+id/tvProvince"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:text="@string/courier_company"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/snCourierCompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tvProvince"></Spinner>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="4dp">

        <TextView
            android:id="@+id/tvExpressGetAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="35dp"
            android:layout_marginRight="12dp"
            android:text="@string/TakeAddress"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etExpressGetAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tvExpressGetAddress" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="4dp">

        <TextView
            android:id="@+id/tvGetTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="35dp"
            android:layout_marginRight="12dp"
            android:text="@string/TakeTime"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etGetTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tvGetTime"
            android:hint="@string/Take" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="4dp">

        <TextView
            android:id="@+id/tvExpressAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="35dp"
            android:layout_marginRight="12dp"
            android:text="@string/ShippingAddress"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etExpressAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tvExpressAddress" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="4dp">

        <TextView
            android:id="@+id/Time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="35dp"
            android:layout_marginRight="12dp"
            android:text="@string/time"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/llTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/Time"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:text="@string/thing"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:editable="false"
                android:text="@string/thing2"
                android:textSize="18sp" />
        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/btCourierBring"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/submit_button_selector"
        android:text="@string/btLogistics" />

</LinearLayout>
