<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_material_light"
    android:orientation="vertical">

    <include
        android:id="@+id/demandTitle"
        layout="@layout/title_bar" />

    <EditText
        android:id="@+id/etDemand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/demandTitle"
        android:gravity="top|left"
        android:hint="@string/example"
        android:lines="10"
        android:background="@null"
        />

    <LinearLayout
        android:id="@+id/ll_select"
        android:layout_below="@+id/etDemand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp">
        <RelativeLayout
            android:id="@+id/ll_City"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/tv_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/cities"/>
            <Spinner
                android:id="@+id/snCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/tv_city"
                >
            </Spinner>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_school"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/tv_school"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/school"/>
            <Spinner
                android:id="@+id/snSchool"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/tv_school"
                >
            </Spinner>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ll_MerchandiseType"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/tv_MerchandiseType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/MerchandiseType"/>
            <Spinner
                android:id="@+id/snMerchandiseType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/tv_MerchandiseType"
                >
            </Spinner>
        </RelativeLayout>
    </LinearLayout>




    <Button
        android:id="@+id/btSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/submit_button_selector"
        android:text="@string/submit"
        android:layout_below="@+id/ll_select"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp" />

</RelativeLayout>
